--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "ecommerce-front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000/",
   "dependencies": {
     "braintree-web": "^3.45.0",
     "braintree-web-drop-in-react": "^1.0.7",
